# fire-forecast

./: .copilot  .flake8  .gitignore  .pre-commit-config.yaml  EvaluateModels.py  LICENSE  README.md  pyproject.toml
ci/: environment.yaml  environment_cpu.yaml  environment_gpu.yaml
fire_forecast/: __init__.py
fire_forecast/data_preparation/: README.md  SelectFirePixels_FRP.py  create_training_set.py  cut_data.py  cut_data_all_shifts.py  data_selector.py  select_data.py  select_data_all_shifts.py  training_set_generator.py
fire_forecast/data_retrieval/: push_meteo_fire.py  retrieve_meteo_fire.sh
fire_forecast/deep_learning/: README.md  ensemble.py  fire_dataset.py  hyperparameter_gridsearch.py  iteratior.py  iterator.py  losses.py  models.py  train.py  training.py  utils.py
fire_forecast/deep_learning/configs/: example0.yaml  example0_checkpoint.yaml  example0_copy.yaml  example_residual.yaml  hyperparameter_example.yaml
fire_forecast/evaluation/: Readme.md  evaluation.py
fire_forecast/fire_model/: __init__.py  fire_model.py
fire_forecast/forecasting/: data_loader.py  datasets.py  evaluation.py
tests/: test_data_selector.py  test_evaluation.py  test_fire_model.py  test_prepare_data.py  test_training_set_generator.py
tests/file_examples/: GFAS_for_cutter.nc  postprocessed_data.nc  postprocessed_data_no_ident.nc
