[tool.poetry]
name = "fire-forecast"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "fire_forecast"}]

[tool.poetry.dependencies]
python = "^3.10"
dask = "^2023.5.1"
xarray = "^2023.5.0"
tqdm = "^4.65.0"
matplotlib = "^3.7.1"
h5py = "^3.9.0"
loguru = "^0.7.0"
typing-extensions = "^4.7.1"
scikit-learn = "^1.2.2"
seaborn = "^0.12.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
pre-commit = "^3.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
